--- a/assets/scss/base/_fonts.scss
+++ b/assets/scss/base/_fonts.scss
@@ -9,6 +9,7 @@
 
 @font-face {
     font-family: 'rubik_blackregular';
+    font-display: swap;
     src: url('~@/assets/fonts/rubik-black-webfont.woff2') format('woff2'),
     url('~@/assets/fonts/rubik-black-webfont.woff') format('woff');
     font-weight: normal;
@@ -21,6 +22,7 @@
 
 @font-face {
     font-family: 'rubikbold';
+    font-display: swap;
     src: url('~@/assets/fonts/rubik-bold-webfont.woff2') format('woff2'),
     url('~@/assets/fonts/rubik-bold-webfont.woff') format('woff');
     font-weight: normal;
@@ -33,6 +35,7 @@
 
 @font-face {
     font-family: 'rubik_mediumregular';
+    font-display: swap;
     src: url('~@/assets/fonts/rubik-medium-webfont.woff2') format('woff2'),
     url('~@/assets/fonts/rubik-medium-webfont.woff') format('woff');
     font-weight: normal;
@@ -45,6 +48,7 @@
 
 @font-face {
     font-family: 'rubikregular';
+    font-display: swap;
     src: url('~@/assets/fonts/rubik-regular-webfont.woff2') format('woff2'),
     url('~@/assets/fonts/rubik-regular-webfont.woff') format('woff');
     font-weight: normal;
@@ -57,6 +61,7 @@
 
 @font-face {
     font-family: 'rubik_lightregular';
+    font-display: swap;
     src: url('~@/assets/fonts/rubik-light-webfont.woff2') format('woff2'),
     url('~@/assets/fonts/rubik-light-webfont.woff') format('woff');
     font-weight: normal;
