--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -5,8 +5,19 @@
 // Date: 2019-07-16
 // Time: 17:05
 //
+
+html {
+    &.has-scroll-smooth {
+        overflow: hidden;
+    }
+}
+
 body {
     @apply .font-rubik-regular .text-gray-800 .bg-black;
+
+    &.has-scroll-smooth {
+        overflow: hidden;
+    }
 }
 
 
