--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -10,10 +10,24 @@ body {
     @apply antialiased;
 }
 
+h1,
+.h1,
+h2,
+.h2,
+h3,
+.h3,
+h4,
+.h4,
+h5,
+.h5,
+h6,
+.h6 {
+    @apply .text-gray-200 .font-rubik-black .leading-none .uppercase;
+}
 
 h1,
 .h1 {
-    @apply .font-rubik-black .leading-none .text-3xl .uppercase;
+    @apply .text-3xl;
 
     @screen md {
         @apply .text-6xl;
@@ -22,7 +36,7 @@ h1,
 
 h2,
 .h2 {
-    @apply .font-rubik-black .leading-none .text-2xl .uppercase;
+    @apply .text-2xl;
 
     @screen md {
         @apply .text-5xl;
@@ -31,7 +45,7 @@ h2,
 
 h3,
 .h3 {
-    @apply .font-rubik-black .leading-none .text-xl .uppercase;
+    @apply .text-xl;
 
     @screen md {
         @apply .text-4xl;
@@ -40,7 +54,7 @@ h3,
 
 h4,
 .h4 {
-    @apply .font-rubik-black .leading-none .text-lg .uppercase;
+    @apply .text-lg;
 
     @screen md {
         @apply .text-3xl;
@@ -49,7 +63,7 @@ h4,
 
 h5,
 .h5 {
-    @apply .font-rubik-black .leading-none .text-lg .uppercase;
+    @apply .text-lg;
 
     @screen md {
         @apply .text-3xl;
@@ -58,7 +72,7 @@ h5,
 
 h6,
 .h6 {
-    @apply .font-rubik-black .leading-none .text-lg .uppercase;
+    @apply .text-lg;
 
     @screen md {
         @apply .text-3xl;
