--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -22,59 +22,59 @@ h5,
 .h5,
 h6,
 .h6 {
-    @apply .text-gray-200 .font-rubik-black .leading-none .uppercase;
+    @apply text-gray-200 font-rubik-black leading-none uppercase;
 }
 
 h1,
 .h1 {
-    @apply .text-3xl;
+    @apply text-3xl;
 
     @screen md {
-        @apply .text-6xl;
+        @apply text-6xl;
     }
 }
 
 h2,
 .h2 {
-    @apply .text-2xl;
+    @apply text-2xl;
 
     @screen md {
-        @apply .text-5xl;
+        @apply text-5xl;
     }
 }
 
 h3,
 .h3 {
-    @apply .text-xl;
+    @apply text-xl;
 
     @screen md {
-        @apply .text-4xl;
+        @apply text-4xl;
     }
 }
 
 h4,
 .h4 {
-    @apply .text-lg;
+    @apply text-lg;
 
     @screen md {
-        @apply .text-3xl;
+        @apply text-3xl;
     }
 }
 
 h5,
 .h5 {
-    @apply .text-lg;
+    @apply text-lg;
 
     @screen md {
-        @apply .text-3xl;
+        @apply text-3xl;
     }
 }
 
 h6,
 .h6 {
-    @apply .text-lg;
+    @apply text-lg;
 
     @screen md {
-        @apply .text-3xl;
+        @apply text-3xl;
     }
 }
