--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -22,7 +22,7 @@ h5,
 .h5,
 h6,
 .h6 {
-    @apply text-gray-200 font-rubik-black leading-none uppercase;
+    @apply font-rubik-black leading-none uppercase;
 }
 
 h1,
