--- a/assets/scss/components/_btn.scss
+++ b/assets/scss/components/_btn.scss
@@ -21,11 +21,11 @@
     }
 
     &--ghost {
-        @apply bg-transparent text-white border border-white;
+        @apply bg-transparent text-polarnight-nord-3 border border-current;
         transition: color 0.4s, border-color 0.4s;
 
         &:hover {
-            @apply border-gray-500 text-white;
+            @apply text-frost-nord-10 border-frost-nord-10;
         }
     }
 
