Update colors and content

--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -12,7 +12,7 @@ html {
 
 body {
     position: relative;
-    @apply font-rubik-regular text-polarnight-nord-3 bg-snowstorm-nord-6;
+    @apply font-rubik-regular text-polarnight-nord-3 bg-body-background;
 }
 
 
