Add nuxtjs/svg modul

--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -17,7 +17,7 @@ body {
 
 
 // Liens
-a {
+a, button {
     @apply text-frost-nord-10 dark:text-frost-nord-8;
     transition: color 0.4s;
 
@@ -25,4 +25,5 @@ a {
         @apply text-polarnight-nord-2 dark:text-snowstorm-nord-6;
     }
 }
+
 
